deploy/webapp-deploy-rolling.yaml
# kubectl set env deploy webapp VERSION=v2.0.0
# kubectl rollout status deploy webapp
# kubectl rollout pause deploy webapp
# kubectl rollout resume deploy webapp
# kubectl rollout undo deploy webapp [--to-revision=3]

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
  name: webapp
  namespace:
spec:
  replicas: 6
  selector:
    matchLabels:
      run: webapp
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  progressDeadlineSeconds: 300
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        run: webapp
    spec:
      containers:
      - image: kalise/deploy-webapp:latest
        name: webapp
        ports:
        - name: root
          containerPort: 8080
          protocol: TCP
        - name: probe
          containerPort: 8086
          protocol: TCP
        - name: metrics
          containerPort: 9101
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ready
            port: 8086
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /live
            port: 8086
            scheme: HTTP
          periodSeconds: 15
