deploy/webapp-deploy-canary.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/service-weights: |
      webapp-stable: 80%
      webapp-canary: 20%
spec:
  rules:
  - host: webapp.kube.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp-stable
          servicePort: 80
      - path: /
        backend:
          serviceName: webapp-canary
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-stable
  labels:
    run: webapp-stable
  namespace:
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    run: webapp-stable
    version: v1.0.0
  type: ClusterIP
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-canary
  labels:
    run: webapp-canary
  namespace:
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    run: webapp-canary
    version: v2.0.0
  type: ClusterIP
  sessionAffinity: None
